[package]
name = "mtgtypes"
version = "0.0.1"
authors = ["Max Dymond <cmeister2@gmail.com>"]
edition = "2018"
description = "A Rust types library for Magic: the Gathering"
readme = "README.md"
repository = "https://github.com/cmeister2/mtgtypes-rs/"
license = "MIT"
keywords = ["mtg"]

[badges]
travis-ci = { repository = "cmeister2/mtgtypes-rs", branch = "master" }

[dependencies]
